Apply style rules to listing page (and remove superfluous styles).

--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -1,11 +1,11 @@
 $listing-padding: 30px;
 
 .subdued {
-  opacity: .9;
+  opacity: 0.9;
 }
 
-.moreSubdued {
-  opacity: .6;
+.more-subdued {
+  opacity: 0.6;
 }
 // print only
 .print {
@@ -20,10 +20,13 @@ $listing-padding: 30px;
   .contact {
     position: absolute;
     left: 10cm;
-    bottom: -.3cm;
+    bottom: -0.3cm;
     font-size: 10pt;
   }
-  .content {
+  .contact-phone {
+    margin-top: 4px;
+  }
+  .images {
     margin-top: 60px;
     .listing-name {
       text-transform: uppercase;
@@ -33,7 +36,7 @@ $listing-padding: 30px;
   .gallery {
     margin-top: 12px;
     width: 100%;
-    >img {
+    > img {
       display: inline-block;
       width: 32.5%;
       height: 200px;
@@ -62,7 +65,7 @@ $listing-padding: 30px;
     float: right;
     padding: 20px;
     width: 33%;
-    margin-right: .25cm;
+    margin-right: 0.25cm;
     border-style: solid;
     border-width: thin;
     margin-top: 17px;
@@ -72,7 +75,7 @@ $listing-padding: 30px;
     }
     > ul {
       padding-left: 0;
-      margin-top: .5cm;
+      margin-top: 0.5cm;
       > li {
         list-style-type: none;
         margin-bottom: 7px;
@@ -122,7 +125,7 @@ $listing-padding: 30px;
     font-weight: 700;
   }
 
-  #listings-content {
+  .listings-content {
     position: relative;
     margin: -25vh auto 0 auto;
     max-width: $page-max-width;
@@ -158,25 +161,25 @@ $listing-padding: 30px;
       position: absolute;
       width: 19%;
       height: 17%;
-      font-size: .5em;
-      opacity: .88;
+      font-size: 0.5em;
+      opacity: 0.88;
       bottom: 3px;
       right: 8px;
       margin: 12px;
       border: solid;
-      border-width: .35em;
+      border-width: 0.35em;
     }
     .gallery-navigation {
       position: absolute;
       cursor: pointer;
       bottom: 10px;
       border: solid;
-      border-width: 0 .045em .045em 0;
+      border-width: 0 0.045em 0.045em 0;
       padding: 3px;
       font-size: 6em;
-      width: .35em;
+      width: 0.35em;
       max-width: 25px;
-      height: .35em;
+      height: 0.35em;
       max-height: 25px;
       top: 50%;
       vertical-align: middle;
@@ -229,17 +232,21 @@ $listing-padding: 30px;
       height: 100px;
       width: 100%;
       z-index: 5;
-      background-image: linear-gradient(to bottom, rgba(#eee, 0), rgba(#eee, 1));
+      background-image: linear-gradient(
+        to bottom,
+        rgba(#eee, 0),
+        rgba(#eee, 1)
+      );
     }
   }
 
-  #header-text-listings {
+  .header-text-listings {
     font-family: $font-brand;
     color: $background-color;
     font-size: 4em;
     padding-bottom: 0.5em;
-    text-shadow: 0px 3px 20px rgba(0,0,0,1);
-    .location {
+    text-shadow: 0px 3px 20px rgba(0, 0, 0, 1);
+    div {
       position: relative;
       text-align: left;
       padding-left: 12px;
@@ -258,20 +265,12 @@ $listing-padding: 30px;
     }
   }
 
-  #listings-sidebar {
+  .listings-sidebar {
     position: relative;
     display: inline-block;
     width: 33%;
     padding: 0 12px;
     margin-bottom: 22px;
-  }
-
-  .listings-sidebar__inner {
-    position: sticky;
-    top: 12px;
-    @include mobile {
-      position: static;
-    }
   }
 
   #listings-info {
@@ -299,7 +298,7 @@ $listing-padding: 30px;
 
   .light-line {
     border-style: solid;
-    opacity: .9;
+    opacity: 0.9;
   }
 
   .amenity-list {
@@ -308,7 +307,7 @@ $listing-padding: 30px;
     padding: 0;
     > hr {
       border-color: #c35440;
-      opacity: .5;
+      opacity: 0.5;
       border-style: solid;
     }
   }
@@ -378,7 +377,7 @@ $listing-padding: 30px;
       margin: 0;
       padding: 0;
     }
-    #header-text-listings {
+    .header-text-listings {
       font-size: 2.5em;
       z-index: 2;
       color: white;
@@ -438,5 +437,3 @@ $listing-padding: 30px;
     display: none;
   }
 }
-
-
