--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -21,95 +21,126 @@
     <!-- endbuild -->
   </head>
   <body>
+
     {% include login.html %}
+
     {% include nav-modal.html active-section="experience" %}
+
     {% include contact-form.html %}
-    <div class="main">
-      <div id="container-experience">
-        <div class="experience-main">
-          <div class="top">
-            <img src="images/logo.png" class="logo-upper-left"/>
-            <div class="ham-menu"></div>
-            <div class="services__hero">
-              <div class="state__links">
-                <div class="link__outer">
-                  <a
-                    href="/experience.html"
-                    id="experience-default-link"
-                    class="state__link state__link--header state--default"
-                  >
-                    {{page.text_title}}
-                  </a>
-                </div>
+
+    <div
+      id="container-experience"
+      class="main"
+    >
+
+      <div class="top">
+
+        <img
+          src="images/logo.png"
+          class="logo-upper-left"
+        />
+
+        <div class="ham-menu"></div>
+
+        <div class="services__hero">
+          <div>
+            <div>
+              <div class="link__outer">
+                <a
+                  href="/experience.html"
+                  id="experience-default-link"
+                  class="state__link state__link--header state--default"
+                >
+                  {{page.text_title}}
+                </a>
               </div>
-              <div class="services__links state__links">
-                <div class="link__outer">
-                  <a
-                    href="/experience?service=tenant"
-                    id="tenant-service-link"
-                    class="state__link state--tenant"
-                  >
-                    TENANT<br /> REPRESENTATION
-                  </a>
-                </div>
-                <div class="link__outer">
-                  <a
-                    href="/experience?service=landlord"
-                    id="landlord-service-link"
-                    class="state__link state--landlord"
-                  >
-                    LANDLORD<br /> REPRESENTATION
-                  </a>
-                </div>
-                <div class="link__outer">
-                  <a
-                    href="/experience?service=investment"
-                    id="investment-service-link"
-                    class="state__link state--investment"
-                  >
-                    INVESTMENT<br /> SALES
-                  </a>
-                </div>
-              </div>
-              <div class="state state--default services__description">
-                {{ page.text_body }}
-              </div>
-              <div class="state state--tenant services__description">
-                {{ page.tenant_services_text }}
-              </div>
-              <div class="state state--landlord services__description">
-                {{ page.landlord_services_text }}
-              </div>
-              <div class="state state--investment services__description">
-                {{ page.investment_services_text }}
-              </div>
-              <button class="contact-us-link contact-us-button">CONTACT US</button>
             </div>
-          </div>
-          <div class="bottom">
-            <div class="state state--tenant">
-              {% include service-example.html
-                examples=site.examples_tenant
-                multi-image=true
-              %}
+
+            <div>
+
+              <div class="link__outer">
+                <a
+                  href="/experience?service=tenant"
+                  id="tenant-service-link"
+                  class="state__link state--tenant"
+                >
+                  TENANT<br /> REPRESENTATION
+                </a>
+              </div>
+
+              <div class="link__outer">
+                <a
+                  href="/experience?service=landlord"
+                  id="landlord-service-link"
+                  class="state__link state--landlord"
+                >
+                  LANDLORD<br /> REPRESENTATION
+                </a>
+              </div>
+
+              <div class="link__outer">
+                <a
+                  href="/experience?service=investment"
+                  id="investment-service-link"
+                  class="state__link state--investment"
+                >
+                  INVESTMENT<br /> SALES
+                </a>
+              </div>
+
             </div>
-            <div class="state state--landlord">
-              {% include service-example.html
-                examples=site.examples_landlord
-                multi-image=true
-              %}
+
+            <div class="state state--default services__description">
+              {{ page.text_body }}
             </div>
-            <div class="state state--investment">
-              {% include service-example.html
-                examples=site.examples_investment
-                multi-image=true
-              %}
+
+            <div class="state state--tenant services__description">
+              {{ page.tenant_services_text }}
             </div>
+
+            <div class="state state--landlord services__description">
+              {{ page.landlord_services_text }}
+            </div>
+
+            <div class="state state--investment services__description">
+              {{ page.investment_services_text }}
+            </div>
+
+            <button class="contact-us-link contact-us-button">
+              CONTACT US
+            </button>
+
           </div>
         </div>
-
-        {% include footer.html %}
       </div>
+
+      <div class="bottom">
+
+        <div class="state state--tenant">
+          {% include service-example.html
+            examples=site.examples_tenant
+            multi-image=true
+          %}
+        </div>
+
+        <div class="state state--landlord">
+          {% include service-example.html
+            examples=site.examples_landlord
+            multi-image=true
+          %}
+        </div>
+
+        <div class="state state--investment">
+          {% include service-example.html
+            examples=site.examples_investment
+            multi-image=true
+          %}
+        </div>
+
+      </div>
+
+      {% include footer.html %}
+
     </div>
     {% include include-scripts.html %}
     <script type="text/javascript" src="/scripts/experience.js"></script>
