Instead of having 'close' listeners for every type of modal... let's just have a `modal-close` element, who's click handler will close any 'active-modal' instance.

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,6 +1,6 @@
-<div class="contact-us-modal">
+<div class="modal contact-us-modal">
   <div class="inner">
-    <div class="contact-close"></div>
+    <div class="modal__close"></div>
     <form id="gform" class="form" method="POST">
       <p class="contact-us">CONTACT US</p>
       {% include contact-info.html %}
