--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -15,7 +15,7 @@
   position: fixed;
   right: 18px;
   top: 18px;
-  box-shadow: 0px 1px 5px rgba(0,0,0,0.15);
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.15);
 }
 
 @mixin close-button {
@@ -116,4 +116,10 @@
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
   }
+}
+
+@mixin bg-cover-center {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
