--- a/_sass/agent-card.scss
+++ b/_sass/agent-card.scss
@@ -1,11 +1,17 @@
 .agent-card {
   width: 23%;
-  min-width: 235px;
+  min-width: 280px;
   max-width: 385px;
-  margin: 0 10px;
+  margin: 10px;
   background-color: white;
   box-shadow: 0px 0px 2em gainsboro;
+  overflow: hidden;
   border: 1px solid #c7c7c7;
+  @include mobile {
+    width: 100%;
+    max-width: auto;
+    margin: 5px 0;
+  }
 
   .hero {
     @include bg-cover-center;
