--- a/css/main.scss
+++ b/css/main.scss
@@ -42,6 +42,10 @@
   text-decoration: none;
 }
 
+.pt-site-header {
+  padding-top: 68px;
+}
+
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
