Fix link references within the navigation modal.

--- a/_includes/nav-modal.html
+++ b/_includes/nav-modal.html
@@ -1,7 +1,7 @@
 <div class="nav-modal">
 	<div class="active-section-{{ include.active-section }}">
 
-		<img src="images/logo.png" class="modal-logo" />
+		<img src="/images/logo.png" class="modal-logo" />
 
 		<div class="menu-close"></div>
 
@@ -27,7 +27,7 @@
 
 			<li>
 				<a
-					href="listings.html"
+					href="/listings.html"
 					class="link-listings"
 				>
 					LISTINGS
@@ -36,7 +36,7 @@
 
 			<li>
 				<a
-					href="experience.html"
+					href="/experience.html"
 					class="link-experience"
 				>
 					EXPERIENCE
@@ -45,7 +45,7 @@
 
 			<li>
 				<a
-					href="about.html"
+					href="/about.html"
 					class="link-about"
 				>
 					ABOUT
