apply style guide to nav-modal partial

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,6 +1,14 @@
 <div class="site-header">
-	<img src="images/logo.png" class="logo-upper-left"/>
+
+	<img
+		src="images/logo.png"
+		class="logo-upper-left"
+	/>
+
 	{% include contact-form.html %}
+
 	<div class="ham-menu"></div>
+
 	{% include nav-modal.html active-section="about" %}
+
 </div>
