More fine-tuning ob about / about modals styles.

--- a/_includes/agent-modal.html
+++ b/_includes/agent-modal.html
@@ -8,10 +8,9 @@
 
 		<div class="hero">
 
-			<div>
+			<div class="hero__avatar">
 				<img
 					src="{{ include.agent.avatar }}"
-					class="hero__avatar"
 				/>
 			</div>
 
