--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -67,6 +67,7 @@
     background-color: white;
     @include mobile {
       position: absolute;
+      padding: 0 18px;
       top: 0;
       left: 0;
       transform: none;
