--- a/css/main.scss
+++ b/css/main.scss
@@ -40,6 +40,9 @@
   padding: 5px 20px;
   text-transform: uppercase;
   text-decoration: none;
+  @include mobile {
+    font-size: 1em;
+  }
 }
 
 .pt-site-header {
