--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -157,81 +157,84 @@
           </div>
         </div>
 
-        <a name="services"></a>
-        <div
+        <a
           id="services-content"
-          class="services-info"
-        >
+          name="services"
+        ></a>
 
-          <div class="services-row">
-            <div class="services-header">
-              <p>
-                <strong>OUR</strong> SERVICES
-              </p>
+        <div class="services-container">
+          <div>
+
+            <div class="services-row">
+              <div class="services-header">
+                <p>
+                  <strong>OUR</strong> SERVICES
+                </p>
+              </div>
             </div>
+
+            <div class="services-row">
+
+              <div class="services-1 services-text">
+
+                <div class="medium-white-text">
+                  <strong>TENANT</strong> REPRESENTATION
+                </div>
+
+                <div class="service-description">
+                  {{ page.tenant_services_blurb }}
+                </div>
+
+                <div
+                  class="btn-learn-more btn-services"
+                  id="tenant-service-modal-button"
+                >
+                  LEARN MORE
+                </div>
+
+              </div>
+
+              <div class="services-2 services-text">
+
+                <div class="medium-white-text">
+                  <strong>LANDLORD</strong> REPRESENTATION
+                </div>
+
+                <div class="service-description">
+                  {{ page.landlord_services_blurb }}
+                </div>
+
+                <div
+                  class="btn-learn-more btn-services"
+                  id="landlord-service-modal-button"
+                >
+                  LEARN MORE
+                </div>
+
+              </div>
+
+              <div class="services-text">
+
+                <div class="medium-white-text">
+                  <strong>INVESTMENT</strong> SALES
+                </div>
+
+                <div class="service-description">
+                  {{ page.investment_services_blurb }}
+                </div>
+
+                <div
+                  class="btn-learn-more btn-services"
+                  id="investment-service-modal-button"
+                >
+                  LEARN MORE
+                </div>
+
+              </div>
+
+            </div>
+
           </div>
-
-          <div class="services-row">
-
-            <div class="services-1 services-text">
-
-              <div class="medium-white-text">
-                <strong>TENANT</strong> REPRESENTATION
-              </div>
-
-              <div class="service-description">
-                {{ page.tenant_services_blurb }}
-              </div>
-
-              <div
-                class="btn-learn-more btn-services"
-                id="tenant-service-modal-button"
-              >
-                LEARN MORE
-              </div>
-
-            </div>
-
-            <div class="services-2 services-text">
-
-              <div class="medium-white-text">
-                <strong>LANDLORD</strong> REPRESENTATION
-              </div>
-
-              <div class="service-description">
-                {{ page.landlord_services_blurb }}
-              </div>
-
-              <div
-                class="btn-learn-more btn-services"
-                id="landlord-service-modal-button"
-              >
-                LEARN MORE
-              </div>
-
-            </div>
-
-            <div class="services-text">
-
-              <div class="medium-white-text">
-                <strong>INVESTMENT</strong> SALES
-              </div>
-
-              <div class="service-description">
-                {{ page.investment_services_blurb }}
-              </div>
-
-              <div
-                class="btn-learn-more btn-services"
-                id="investment-service-modal-button"
-              >
-                LEARN MORE
-              </div>
-
-            </div>
-
-          </div>
-
         </div>
 
         <div id="contact-us-home-section">
