DRY things up by using the `site-header` partial (where applicable).

--- a/_includes/nav-modal.html
+++ b/_includes/nav-modal.html
@@ -1,7 +1,10 @@
 <div class="nav-modal">
 	<div class="active-section-{{ include.active-section }}">
 
-		<img src="/images/logo.png" class="modal-logo" />
+		<img
+			src="/images/logo.png"
+			class="modal-logo"
+		/>
 
 		<div class="menu-close"></div>
 
