--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -26,7 +26,7 @@
 
     {% include nav-modal.html active-section="experience" %}
 
-    {% include contact-form.html %}
+    {% include site-header.html %}
 
     <div
       id="container-experience"
@@ -35,14 +35,6 @@
       <div class="hero">
 
         <div class="hero__top">
-
-          <img
-            src="images/logo.png"
-            class="logo-upper-left"
-          />
-
-          <div class="ham-menu"></div>
-
           <div class="services__hero">
             <div>
               <div>
