--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -17,20 +17,13 @@
   <body>
     {% include login.html %}
 
-    {% include contact-form.html %}
-
     <div class="main">
 
       {% include nav-modal.html active-section="listings" %}
 
+      {% include site-header.html %}
+
       <div id="container-listings">
-
-        <img
-          src="images/logo.png"
-          class="logo-upper-left"
-        />
-
-        <div class="ham-menu"></div>
 
         <div class="content">
 
