--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,14 +1,12 @@
 <div class="site-header">
 
 	<img
-		src="images/logo.png"
+		src="/images/logo.png"
 		class="logo-upper-left"
 	/>
 
 	{% include contact-form.html %}
 
 	<div class="ham-menu"></div>
-
-	{% include nav-modal.html active-section="about" %}
 
 </div>
